--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@
 }
 
 .hr_title {
-  background-color:  #7c48ad; ;
+  background-color: #7c48ad; 
   height: 1px;
   margin-right: 100px;
   margin-left: 100px;
