[UPDATE] front form annonce

--- a/public/theme/mdb/css/style.css
+++ b/public/theme/mdb/css/style.css
@@ -48,7 +48,7 @@
 }
   
 .hr_title {
-    background-color:  #1565c0; ;
+    background-color:  #1565c0; 
     height: 1px;
     margin-right: 100px;
     margin-left: 100px;
