--- a/public/theme/mdb/css/style.css
+++ b/public/theme/mdb/css/style.css
@@ -77,3 +77,9 @@
     color: black;
     font-weight: bold;
 }
+
+.title_store {
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+}
