--- a/public/theme/mdb/css/style.css
+++ b/public/theme/mdb/css/style.css
@@ -122,3 +122,12 @@
     font-weight: bold;
     margin-top: 10px;
 }
+
+#community {
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+#annoncesList {
+    margin-bottom: 20px;
+}
